--- a/Clima/estilos/estilos.css
+++ b/Clima/estilos/estilos.css
@@ -11,7 +11,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    background: linear-gradient(rgb(47,150,163), rgb(48,62,143));
+    background: linear-gradient(rgb(50, 155, 169), rgb(24, 47, 175));
     font-family: sans-serif;
     color: white;
 }
